--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chrono-node": "^1.3.3",
     "eris": "^0.7.0",
     "eris-embed-builder": "^0.1.2",
+    "glob": "^7.1.2",
     "jsonfile": "^3.0.0",
     "moment-timezone": "^0.5.13"
   }
