--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "eris": "^0.7.0",
     "eris-embed-builder": "^0.1.2",
     "glob": "^7.1.2",
-    "jsonfile": "^3.0.0",
-    "moment-timezone": "^0.5.13"
+    "moment-timezone": "^0.5.13",
+    "mongoose": "^4.10.6"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
