--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://gitlab.com/pyrox18/scheduler-discord#README",
   "dependencies": {
     "chrono-node": "^1.3.3",
+    "dict": "^1.4.0",
     "eris": "^0.7.0",
     "eris-embed-builder": "^0.1.2",
     "glob": "^7.1.2",
     "moment-timezone": "^0.5.13",
-    "mongoose": "^4.10.6"
+    "mongoose": "^4.10.6",
+    "node-schedule": "^1.2.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
