--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "glob": "^7.1.2",
     "moment-timezone": "^0.5.13",
     "mongoose": "^4.10.6",
-    "node-schedule": "^1.2.3"
+    "node-schedule": "^1.2.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
