--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "moment-timezone": "^0.5.13",
     "mongoose": "^4.10.6",
     "node-schedule": "^1.2.3",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "winston-mongodb": "^2.0.10"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
