--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "scheduler-discord",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "A Discord bot for scheduling events",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --ignore data/"
+    "build": "tsc",
+    "start": "nodemon build/app.js --ignore data/",
+    "watch": "concurrently --kill-others \"tsc -w\" \"npm start\""
   },
   "repository": {
     "type": "git",
@@ -19,17 +21,23 @@
   "dependencies": {
     "chrono-node": "^1.3.5",
     "dict": "^1.4.0",
-    "eris": "^0.7.1",
+    "eris": "^0.7.2",
     "eris-embed-builder": "^0.1.2",
     "fuzzyset.js": "0.0.3",
     "glob": "^7.1.2",
     "moment-timezone": "^0.5.13",
-    "mongoose": "^4.11.7",
-    "node-schedule": "^1.2.4",
+    "mongoose": "^4.11.13",
+    "node-schedule": "^1.2.5",
     "winston": "^2.3.1",
-    "winston-mongodb": "^2.0.10"
+    "winston-mongodb": "^3.0.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "@types/moment-timezone": "^0.5.0",
+    "@types/mongoose": "^4.7.23",
+    "@types/node": "^8.0.31",
+    "@types/winston": "^2.3.6",
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.12.1",
+    "typescript": "^2.5.3"
   }
 }
