--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/moment-timezone": "^0.5.0",
     "@types/mongoose": "^4.7.23",
     "@types/node": "^8.0.31",
+    "@types/node-schedule": "^1.2.0",
     "@types/winston": "^2.3.6",
     "concurrently": "^3.5.0",
     "nodemon": "^1.12.1",
