--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scheduler-discord",
   "version": "0.5.0",
   "description": "A Discord bot for scheduling events",
-  "main": "app.js",
+  "main": "build/app.js",
   "scripts": {
     "build": "tsc",
     "start": "nodemon --inspect=5858 build/app.js --ignore data/",
