--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A Discord bot for scheduling events",
   "main": "build/app.js",
   "scripts": {
-    "build": "tsc",
+    "gulp": "gulp",
+    "build": "gulp build",
     "start": "nodemon --inspect=5858 build/app.js --ignore data/",
-    "watch": "concurrently --kill-others \"tsc -w\" \"npm start\""
+    "watch": "concurrently --kill-others \"gulp watch\" \"npm start\""
   },
   "repository": {
     "type": "git",
