--- a/src/config/bot-example.config.json
+++ b/src/config/bot-example.config.json
@@ -5,6 +5,5 @@
     "name": "+help | In development"
   },
   "dbConnectionUrl": "mongodb://localhost:27017/schedulerbot",
-  "adminId": "1234567890123456",
-  "version": "0.5.0"
+  "adminId": "1234567890123456"
 }
