Add postinstall script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp": "gulp",
     "build": "gulp build",
     "start": "nodemon --inspect=5858 build/app.js --ignore data/",
-    "watch": "concurrently --kill-others \"gulp watch\" \"npm start\""
+    "watch": "concurrently --kill-others \"gulp watch\" \"npm start\"",
+    "postinstall": "mv src/config/bot-example.config.json src/config/bot.config.json"
   },
   "repository": {
     "type": "git",
