--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment-timezone": "^0.5.13",
     "mongoose": "^4.11.13",
     "node-schedule": "^1.2.5",
+    "raven": "^2.2.1",
     "winston": "^2.3.1",
     "winston-mongodb": "^3.0.1"
   },
@@ -35,6 +36,7 @@
     "@types/mongoose": "^4.7.23",
     "@types/node": "^8.0.31",
     "@types/node-schedule": "^1.2.0",
+    "@types/raven": "^2.1.2",
     "@types/winston": "^2.3.6",
     "concurrently": "^3.5.0",
     "gulp": "^3.9.1",
