--- a/src/config/bot-example.config.json
+++ b/src/config/bot-example.config.json
@@ -5,5 +5,6 @@
     "name": "+help | In development"
   },
   "dbConnectionUrl": "mongodb://localhost:27017/schedulerbot",
-  "adminId": "1234567890123456"
+  "adminId": "1234567890123456",
+  "ravenDSN": "{PROTOCOL}://{PUBLIC_KEY}:{SECRET_KEY}@{HOST}/{PATH}{PROJECT_ID}"
 }
