--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/pyrox18/schedulerbot",
   "dependencies": {
     "chrono-node": "^1.3.5",
+    "dotenv": "^4.0.0",
     "eris": "^0.7.2",
     "fuzzyset.js": "0.0.3",
     "moment-timezone": "^0.5.13",
@@ -32,6 +33,7 @@
     "winston-mongodb": "^3.0.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.1",
     "@types/moment-timezone": "^0.5.0",
     "@types/mongoose": "^4.7.23",
     "@types/node": "^8.0.31",
