--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^4.11.13",
     "node-schedule": "^1.2.5",
     "raven": "^2.2.1",
+    "redis": "^2.8.0",
     "winston": "^2.3.1",
     "winston-mongodb": "^3.0.1"
   },
@@ -39,6 +40,7 @@
     "@types/node": "^8.0.31",
     "@types/node-schedule": "^1.2.0",
     "@types/raven": "^2.1.2",
+    "@types/redis": "^2.6.1",
     "@types/winston": "^2.3.6",
     "concurrently": "^3.5.0",
     "gulp": "^3.9.1",
