--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-schedule": "^1.2.5",
     "raven": "^2.2.1",
     "redis": "^2.8.0",
+    "redislock": "^1.3.0",
     "winston": "^2.3.1",
     "winston-mongodb": "^3.0.1"
   },
