Move bot token and URIs to env file
Bot token, MongoDB URI and Sentry DSN are now read from a .env file. Also added an example .env file and updated readme instructions for proper usage.

--- a/src/config/bot-example.config.json
+++ b/src/config/bot-example.config.json
@@ -1,10 +1,7 @@
 {
-  "botToken": "copyAndPasteYourEntireAppBotUserTokenHere",
   "prefix": "+",
   "game": {
     "name": "+help | In development"
   },
-  "dbConnectionUrl": "mongodb://localhost:27017/schedulerbot",
-  "adminId": "1234567890123456",
-  "ravenDSN": "{PROTOCOL}://{PUBLIC_KEY}:{SECRET_KEY}@{HOST}/{PATH}{PROJECT_ID}"
+  "adminId": "1234567890123456"
 }
