--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "gulp": "gulp",
     "build": "gulp build",
     "start": "nodemon --inspect=5858 build/app.js --ignore data/",
-    "watch": "concurrently --kill-others \"gulp watch\" \"npm start\"",
-    "postinstall": "cp src/config/bot-example.config.json src/config/bot.config.json"
+    "watch": "concurrently --kill-others \"gulp watch\" \"npm start\""
   },
   "repository": {
     "type": "git",
