--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gulp": "gulp",
     "build": "gulp build",
     "start": "nodemon --inspect=5858 build/app.js --ignore data/",
-    "watch": "concurrently --kill-others \"gulp watch\" \"npm start\""
+    "dev": "concurrently --kill-others \"gulp watch\" \"npm start\""
   },
   "repository": {
     "type": "git",
