--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "homepage": "https://github.com/pyrox18/schedulerbot",
   "dependencies": {
-    "chrono-node": "^1.3.5",
-    "dotenv": "^4.0.0",
-    "eris": "^0.8.0",
+    "chrono-node": "~1.3.5",
+    "dotenv": "~4.0.0",
+    "eris": "~0.8.0",
     "fuzzyset.js": "0.0.3",
-    "moment-timezone": "^0.5.13",
-    "mongoose": "^4.11.13",
-    "node-schedule": "^1.2.5",
-    "raven": "^2.2.1",
-    "redis": "^2.8.0",
-    "redislock": "^1.3.0",
-    "winston": "^2.3.1",
-    "winston-mongodb": "^3.0.1"
+    "moment-timezone": "~0.5.13",
+    "mongoose": "~4.11.13",
+    "node-schedule": "~1.2.5",
+    "raven": "~2.2.1",
+    "redis": "~2.8.0",
+    "redislock": "~1.3.0",
+    "winston": "~2.3.1",
+    "winston-mongodb": "~3.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.1",
