--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "gulp",
     "build": "gulp build",
     "start": "nodemon --inspect=5858 build/app.js --ignore data/",
+    "lint": "tslint -p tsconfig.json -c tslint.json 'src/**/*.ts'",
     "dev": "concurrently --kill-others \"gulp watch\" \"npm start\""
   },
   "repository": {
@@ -45,6 +46,7 @@
     "concurrently": "^3.5.1",
     "gulp": "^3.9.1",
     "nodemon": "^1.13.3",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2"
   }
 }
