--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eris": "~0.8.2",
     "fuzzyset.js": "0.0.3",
     "moment-timezone": "~0.5.14",
-    "mongoose": "~4.11.14",
+    "mongoose": "^5.1.2",
     "node-schedule": "~1.2.5",
     "raven": "~2.2.1",
     "redis": "~2.8.0",
